--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,31 @@
     android:background="@color/appClr"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/name"
+    <TextView
+        android:id="@+id/title_lang"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:src="@drawable/name"/>
+        android:layout_height="wrap_content"
+        android:text="Language"
+        android:visibility="gone"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/title_main"
+        android:layout_below="@+id/title_lang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/uk_tv_radio"
+        android:textColor="@color/green"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textSize="25sp"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/title_main"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -51,13 +67,14 @@
                             android:src="@drawable/cahnnel_gif"/>
 
                         <TextView
+                            android:id="@+id/text_channel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textColor="@color/yellow"
                             android:textSize="20sp"
                             android:layout_margin="5dp"
-                            android:text="Live Channels"/>
+                            android:text="@string/live_tv_channels"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -108,12 +125,13 @@
                             android:src="@drawable/radio_gif" />
 
                         <TextView
+                            android:id="@+id/text_radio"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             android:drawableLeft="@drawable/ic_baseline_circle_24"
                             android:gravity="center"
-                            android:text="Live Radio"
+                            android:text="@string/live_radio"
                             android:textColor="@color/yellow"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -156,11 +174,12 @@
                                 android:src="@drawable/fav" />
 
                             <TextView
+                                android:id="@+id/text_fav"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Favorites"
+                                android:text="@string/favorites"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -189,11 +208,12 @@
                                 android:src="@drawable/settings" />
 
                             <TextView
+                                android:id="@+id/text_setting"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Settings"
+                                android:text="@string/settings"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -229,11 +249,12 @@
                                 android:src="@drawable/help" />
 
                             <TextView
+                                android:id="@+id/text_help"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Help"
+                                android:text="@string/help"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -262,11 +283,12 @@
                                 android:src="@drawable/feedback" />
 
                             <TextView
+                                android:id="@+id/text_term"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Policy/Terms"
+                                android:text="@string/policy_terms"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -295,11 +317,12 @@
                                 android:src="@drawable/rate" />
 
                             <TextView
+                                android:id="@+id/text_rate"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Rate Us !"
+                                android:text="@string/rate_us"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -335,11 +358,12 @@
                                 android:src="@drawable/report" />
 
                             <TextView
+                                android:id="@+id/text_report"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="Report"
+                                android:text="@string/report"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -368,12 +392,13 @@
                                 android:src="@drawable/more" />
 
                             <TextView
+                                android:id="@+id/text_more"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="More Apps"
+                                android:text="@string/more_apps"
                                 android:textColor="@color/yellow"
                                 android:textSize="15sp" />
                         </LinearLayout>
