--- a/app/src/main/res/layout/activity_favorities.xml
+++ b/app/src/main/res/layout/activity_favorities.xml
@@ -7,17 +7,36 @@
     android:background="@color/appClr"
     tools:context=".Favorities">
 
-    <ImageView
-        android:id="@+id/name"
+    <TextView
+        android:id="@+id/title_lang"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:src="@drawable/fav_name"/>
+        android:layout_height="wrap_content"
+        android:text="Language"
+        android:visibility="gone"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/title_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title_lang"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/favorites"
+        android:textColor="@color/green"
+        android:textSize="25sp" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/title_main"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
