--- a/app/src/main/res/layout/activity_vedio.xml
+++ b/app/src/main/res/layout/activity_vedio.xml
@@ -150,5 +150,11 @@
 
     </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/startBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/transparent_img" />
 
 </RelativeLayout>
