--- a/app/src/main/res/layout/activity_favorities.xml
+++ b/app/src/main/res/layout/activity_favorities.xml
@@ -58,6 +58,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/adView"
         android:layout_below="@id/tabLayout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -68,6 +69,17 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="15dp" />
     </RelativeLayout>
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_id">
+    </com.google.android.gms.ads.AdView>
 
 
 </RelativeLayout>
