--- a/app/src/main/res/layout/activity_radio.xml
+++ b/app/src/main/res/layout/activity_radio.xml
@@ -31,6 +31,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
+        android:layout_above="@id/adView"
         android:layout_below="@+id/title_main"
         android:layout_height="match_parent">
 
@@ -71,5 +72,17 @@
         </androidx.core.widget.NestedScrollView>
 
     </RelativeLayout>
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_id">
+    </com.google.android.gms.ads.AdView>
+
 
 </RelativeLayout>
